--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "Waitinglist.js",
   "scripts": {
+    "mongostart": "sudo mongod --dbpath ~/data/db",
+    "mongoinit":"mongo customerwaitinglist scripts/init.mongo.js",
     "start": "nodemon -w server -e js,graphql server/server.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose",
